# ai-security-toolkit

./: .gitignore  README.md  pyproject.toml  setup.py
ai_security_toolkit/: run.py
ai_security_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai_security_toolkit/modules/: backdoor_trigger_attack.py  fgsm_mobilenet.py  label_flip_attack.py  membership_inference_attack.py  simulate_inversion.py  steal_model.py  train_mnist_model.py
ai_toolkit/: run.py
ai_toolkit/modules/: backdoor_trigger_attack.py  fgsm_mobilenet.py  label_flip_attack.py  membership_inference_attack.py  simulate_inversion.py  steal_model.py
ai_toolkit/shared/: log_utils.py
publish-env/: pyvenv.cfg
