[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-security-toolkit"
version = "1.0.0"
description = "A red-team AI security framework with adversarial attack modules"
readme = "README.md"
authors = [
    { name="Neha" }
]
license = { text="MIT" }
requires-python = ">=3.8"

dependencies = [
    "tensorflow",
    "numpy",
    "matplotlib",
    "pandas",
    "cleverhans"
]

[project.urls]
Homepage = "https://github.com/rishit03/ai-security-toolkit"
Repository = "https://github.com/rishit03/ai-security-toolkit"

[project.scripts]
ai-toolkit = "ai_toolkit.run:main"
