[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-security-toolkit"
version = "1.1.1"
description = "A red-team AI security framework with adversarial attack modules"
readme = "README.md"
authors = [
    { name="Rishit Goel" }
]
license = { text="MIT" }
requires-python = ">=3.8"

dependencies = [
    "tensorflow",
    "numpy",
    "matplotlib",
    "pandas",
    "cleverhans"
]

[project.scripts]
ai-toolkit = "ai_security_toolkit.run:main"

[project.optional-dependencies]
tensorflow = ["tensorflow"]
cleverhans = ["cleverhans"]

[tool.setuptools.packages.find]
include = ["ai_security_toolkit*"]


